--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,14 @@ jsonschema==2.6.0
 jupyter-core==4.4.0
 nbformat==4.4.0
 numpy==1.14.0
+oauthlib==2.0.6
 pandas==0.22.0
 plotly==2.3.0
 python-dateutil==2.6.1
 pytz==2017.3
 requests==2.18.4
+requests-oauthlib==0.8.0
 six==1.11.0
 traitlets==4.3.2
+tweepy==3.5.0
 urllib3==1.22
