--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 certifi==2018.1.18
 chardet==3.0.4
+cycler==0.10.0
 decorator==4.2.1
 idna==2.6
 ipython-genutils==0.2.0
 jsonschema==2.6.0
 jupyter-core==4.4.0
+matplotlib==2.1.2
 nbformat==4.4.0
 numpy==1.14.0
 oauthlib==2.0.6
 pandas==0.22.0
 plotly==2.3.0
+pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.3
 requests==2.18.4
